fixed hover on mobile

--- a/src/components/Game/game.module.scss
+++ b/src/components/Game/game.module.scss
@@ -48,6 +48,9 @@
     ul {
       li {
         width: 350px;
+        &:hover {
+          background-color: #ffffff;
+        }
       }
     }
   }
